# scrn-vv

./: .gitignore
.github/workflows/: scrape.yml
scraper/: .gitignore  README.md  pyproject.toml
scraper/scripts/: _run_capture.py  capture_boxscore_data.py  capture_fixtures.py  capture_next_data.py  dedupe_output.py  discover_and_capture.py  enrich_game_times.py  enrich_print_stats.py  extract_boxscore_fixtures.py
scraper/src/scraper/: __init__.py  boxscore.py  browser.py  cache.py  classes.py  config.py  http.py  logos.py  models.py  nextdata.py  normalize.py  pipeline.py  report.py  roster.py  schedule.py  slugify.py  stats.py  team_page.py  teams.py
scraper/tests/: conftest.py  test_boxscore.py  test_browser.py  test_cache.py  test_classes.py  test_config.py  test_http.py  test_logos.py  test_models.py  test_nextdata.py  test_normalize.py  test_pipeline.py  test_report.py  test_roster.py  test_schedule.py  test_slugify.py  test_stats.py  test_team_page.py  test_teams.py
scraper/tests/fixtures/: boxscore_complete.html  boxscore_complete.json  boxscore_missing.html  boxscore_missing.json  class_7a_directory.html  class_7a_directory.json  ms_football_landing.html  ms_landing.json  team_home.html  team_roster.html  team_roster.json  team_roster_xhr.json  team_schedule.html  team_schedule.json  team_stats.html  team_stats.json
web/: .env.example  .gitignore  README.md  global.d.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
web/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/lib/: auth.ts  data.ts  (+10 more)
(+48 files in other folders)
