[project]
name = "varsity-voices-scraper"
version = "0.1.0"
description = "MaxPreps scraper for Mississippi HS football → canonical JSON"
requires-python = ">=3.11,<3.14"
dependencies = [
    "playwright>=1.47",
    "httpx>=0.27",
    "pydantic>=2.8",
    "sqlite-utils>=3.37",
    "typer>=0.12",
    "structlog>=24.4",
    "anyio>=4.4",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
scrape = "scraper.pipeline:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
